--- a/Thadingyut.html
+++ b/Thadingyut.html
@@ -6,7 +6,7 @@
 	<title>Thadingyut-Festival</title></head>
 <body>
 	 <center><h1 style="color: hsl(400, 100%, 50%);">How To Celebrate Thadingyut Festival</h1>
-	 <img  src="pic1.jpg"width="490"height="157"><br><br>
+	 <img  src="images/pic1.jpg"width="490"height="157"><br><br>
 
 	 <p>During Thadingyut, pagodas and homes through the country are decorated
 with electric lights, colorful paper lanterns, candles and even small
@@ -19,7 +19,7 @@ launch small hot-air balloons, which silently ascend and drift across
 the sky before burning out.</p></center>
 
 <h2 style="float:right;padding-right:520px;color: hsl(400, 100%, 50%);"><b><Pre> Dawel Alm Bowl Floating Festival                         Kyaukse Dancing elephant festival </Pre></b></h2>
-<pre style="float:right;padding-right: 520px;"><img src="thadingyut_2.jpg"width="350"height="210">               <img src="thadingyut_2.jpg "width="350"height="210"></pre>
+<pre style="float:right;padding-right: 520px;"><img src="images/thadingyut_2.jpg"width="350"height="210">               <img src="images/thadingyut_2.jpg "width="350"height="210"></pre>
  <pre style="float:right;padding-right:380px;: rgb(140, 140, 140);font-size:13px"><b>
 
 This festival is unique to Dawei and held on the full moon day. The residents          The annual festival takesplace in  Kyaukse,Mandalay Region, the day before 
@@ -30,9 +30,9 @@ festival will be held small-scale.
 	. </b>	</pre>
 
 
-<img src="thadingyut_2.jpg"width="230"height="130"><br>
-<img src="thadingyut_3.jpg"width="230"height="130"><br>
-<img src="thadingyut_4.jpg"width="230"height="130"><br>
+<img src="images/images/images/thadingyut_2.jpg"width="230"height="130"><br>
+<img src="images/images/thadingyut_3.jpg"width="230"height="130"><br>
+<img src="images/thadingyut_4.jpg"width="230"height="130"><br>
 
 </body>
 </html>
